--- a/sprite.html
+++ b/sprite.html
@@ -2,20 +2,15 @@
 <html>
 <head>
     <title>Sprite</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <link rel="stylesheet" href="sprite.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="sprite.js"></script>
 </head>
 <body>
     <div class="container">
         <h3>Do you want to see something?</h3>
-        <button  type="button" data-toggle="collapse" class="yes" data-target="#click"></button>
-        <button  type="button" data-toggle="collapse" class="no" data-target="#click"></button>
-        <div id="click" class="collapse">
+        <button id="yes"></button>
+        <button id="no"></button>
+        <div id="show">
             <p class="speech">I see you are very curious because you pressed "yes"!</p>
         </div>
     </div>
